[package]
name = "openvpn_1password"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11.13", default-features = false}
tokio = { version = "1.0", features = ["full"] }
log = "0.4.17"
dotenv = "0.15.0"
env_logger = "0.10.0"
tempfile = "3.3.0"